# yanu_description

./: CMakeLists.txt  README.md  package.xml
meshes/: yanu.stl
urdf/: yanu.urdf.xacro  yanu_3.urdf.xacro  yanu_3.xacro
