<?xml version="1.0"?>
<package format="2">
  <name>yanu_description</name>
  <version>0.0.0</version>
  <description>The yanu_description package</description>

  <maintainer email="houman.masnavi@ut.ee">Houman Masnavi</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>  
  <exec_depend>franka_description</exec_depend>

  <export>

  </export>
</package>
